apps/cv/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-server
  template:
    metadata:
      labels:
        app: cv-server
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: cv-storage
              mountPath: /usr/share/nginx/html
      volumes:
        - name: cv-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: cv-service
spec:
  selector:
    app: cv-server
  ports:
    - port: 80
      targetPort: 80
