apps/cv/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - bkasymov.online
      secretName: cv-tls
  rules:
    - host: bkasymov.online
      http:
        paths:
          - path: /cv
            pathType: Prefix
            backend:
              service:
                name: cv-service
                port:
                  number: 80
